--- a/T_Zoo_OB_Spect/T_Zoo_OB_Spect.csproj
+++ b/T_Zoo_OB_Spect/T_Zoo_OB_Spect.csproj
@@ -49,29 +49,33 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\banner.png" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Compile Update="Controls\Page UI\MainPageHeader.xaml.cs">
+	  <Compile Update="Controls\Layout\MainPageHeader.xaml.cs">
 	    <DependentUpon>MainPageHeader.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="Controls\General\AdvImgBtn.xaml">
+	  <MauiXaml Update="Controls\AdvComps\AdvImgBtn.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Controls\Page UI\MainPageHeader.xaml">
+	  <MauiXaml Update="Controls\Layout\MainPageHeader.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	  <MauiXaml Update="Controls\General\OutbackAdventureButton.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Controls\AdvUI\OutbackAdventureFormView.xaml">
+	  <MauiXaml Update="Controls\AdvComps\OutbackAdventureFormView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
-	  <MauiXaml Update="Controls\Page UI\Footer.xaml">
+	  <MauiXaml Update="Controls\Layout\Footer.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
